--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -163,6 +163,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scripts\Player\PlayerManager.h" />
     <ClInclude Include="Prefab\PlayerBike.h" />
     <ClInclude Include="Prefab\EnemyBike.h" />
     <ClInclude Include="Scripts\BackGroundRender.h" />
@@ -204,6 +205,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\Widget\TitleWidgetScript.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scripts\Player\PlayerManager.cpp" />
     <ClCompile Include="Prefab\PlayerBike.cpp" />
     <ClCompile Include="Prefab\EnemyBike.cpp" />
     <ClCompile Include="Scripts\BackGroundRender.cpp" />
