--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -163,6 +163,8 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scripts\Weapon\BulletManager.h" />
+    <ClInclude Include="Scripts\Weapon\Bullet.h" />
     <ClInclude Include="Scene\KangScene\KangScene.h" />
     <ClInclude Include="Scripts\Enemy\Car.h" />
     <ClInclude Include="Scripts\Player\PlayerManager.h" />
@@ -208,6 +210,8 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\TitleAudioScript.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scripts\Weapon\BulletManager.cpp" />
+    <ClCompile Include="Scripts\Weapon\Bullet.cpp" />
     <ClCompile Include="Scene\KangScene\KangScene.cpp" />
     <ClCompile Include="Scripts\Enemy\Car.cpp" />
     <ClCompile Include="Scripts\Player\PlayerManager.cpp" />
