--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -65,6 +65,9 @@
     <Filter Include="Prefab\Player">
       <UniqueIdentifier>{6c9b3d07-5f59-4b28-b349-bc129b91e778}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Prefab\Enemy\Core">
+      <UniqueIdentifier>{b81ab542-aa9a-4f68-8904-be6b00cfd23b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -184,9 +187,6 @@
     <ClInclude Include="Scene\KangScene\KangScene.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Enemy\Car.h">
-      <Filter>Scripts\Enemy\Base</Filter>
-    </ClInclude>
     <ClInclude Include="Prefab\Enemy\EnemyBike.h">
       <Filter>Prefab\Enemy</Filter>
     </ClInclude>
@@ -204,6 +204,12 @@
     </ClInclude>
     <ClInclude Include="Prefab\Enemy\NormalTruck.h">
       <Filter>Prefab\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Prefab\Enemy\Core\Car.h">
+      <Filter>Prefab\Enemy\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Enemy\EnemyManager.h">
+      <Filter>PreCompiledHeader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -319,9 +325,6 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Enemy\Car.cpp">
-      <Filter>Scripts\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Enemy\Car.cpp">
       <Filter>Scripts\Enemy\Base</Filter>
     </ClCompile>
     <ClCompile Include="Prefab\Enemy\EnemyBike.cpp">
@@ -342,5 +345,9 @@
     <ClCompile Include="Prefab\Truck.cpp">
       <Filter>Prefab</Filter>
     </ClCompile>
+    <ClCompile Include="Prefab\Enemy\Core\Car.cpp">
+      <Filter>Prefab\Enemy\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Enemy\EnemyManager.cpp" />
   </ItemGroup>
 </Project>
