[feat] Add DroneScript

--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -196,6 +196,9 @@
     <ClInclude Include="Scripts\Weapon\BulletManager.h">
       <Filter>Scripts\Weapon</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\Weapon\Drone.h">
+      <Filter>Scripts\Weapon</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -312,11 +315,13 @@
     <ClCompile Include="Scene\TitleScene.cpp">
       <Filter>Scene\GameScene</Filter>
     </ClCompile>
+    <ClCompile Include="Scripts\Enemy\Car.cpp">
+      <Filter>Scripts\Enemy</Filter>
+    </ClCompile>
     <ClCompile Include="Scene\KangScene\KangScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Enemy\Car.cpp">
-      <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\TitleAudioScript.cpp">
       <Filter>Scripts</Filter>
@@ -327,8 +332,8 @@
     <ClCompile Include="Scripts\Weapon\BulletManager.cpp">
       <Filter>Scripts\Weapon</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\Enemy\Car.cpp">
-      <Filter>Scripts\Enemy</Filter>
+    <ClCompile Include="Scripts\Weapon\Drone.cpp">
+      <Filter>Scripts\Weapon</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
