--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,19 @@
 # Visual Studio 프로젝트 파일 충돌 시 둘 다 살림
 *.vcxproj merge=union
 *.vcxproj.filters merge=union
+
+
+# 텍스트 파일 자동 정규화 + 윈도우 작업 디렉터리에서는 CRLF
+* text=auto eol=crlf
+
+# VS 관련 파일들 명시 (선택이지만 권장)
+*.sln      text eol=crlf
+*.vcxproj  text eol=crlf
+*.props    text eol=crlf
+*.targets  text eol=crlf
+*.cs       text eol=crlf
+*.cpp      text eol=crlf
+*.h        text eol=crlf
+*.rc       text eol=crlf
+*.xaml     text eol=crlf
+*.resx     text eol=crlf
