--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -240,6 +240,7 @@
     </ClInclude>
     <ClInclude Include="Scripts\Widget\StageWidgetScript.h">
       <Filter>Scripts\Widget</Filter>
+    </ClInclude>
     <ClInclude Include="Scripts\Enemy\Spawn\SpawnData.h">
       <Filter>PreCompiledHeader</Filter>
     </ClInclude>
