--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -185,16 +185,16 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\Audio.h" />
     <ClInclude Include="Scene\DemoScene4.h" />
     <ClInclude Include="Scene\ExampleScene\ExampleScene.h" />
-    <ClInclude Include="Scripts\Enemy.h" />
+    <ClInclude Include="Scripts\Legacy\Enemy.h" />
     <ClInclude Include="Scene\DemoScene3.h" />
     <ClInclude Include="Scripts\Bike\Health.h" />
-    <ClInclude Include="Scripts\Player.h" />
-    <ClInclude Include="Scripts\Aru2.h" />
+    <ClInclude Include="Scripts\Legacy\Player.h" />
+    <ClInclude Include="Scripts\Legacy\Aru2.h" />
     <ClInclude Include="Scripts\Example\ScriptExample.h" />
-    <ClInclude Include="Scripts\CameraController.h" />
+    <ClInclude Include="Scripts\Legacy\CameraController.h" />
     <ClInclude Include="Scripts\BackGroundImage.h" />
     <ClInclude Include="Scripts\BackGroundVideo.h" />
-    <ClInclude Include="Scripts\Aru.h" />
+    <ClInclude Include="Scripts\Legacy\Aru.h" />
     <ClInclude Include="Scripts\SolarScene\Moon.h" />
     <ClInclude Include="Scripts\SolarScene\Earth.h" />
     <ClInclude Include="Scene\DemoScene2.h" />
@@ -239,7 +239,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClCompile Include="Scripts\BackGroundRender.cpp" />
     <ClCompile Include="Scripts\Camera\CameraMover.cpp" />
     <ClCompile Include="Scripts\Bike\BikeMovementScript.cpp" />
-    <ClCompile Include="Scripts\Player.cpp" />
+    <ClCompile Include="Scripts\Legacy\Player.cpp" />
     <ClCompile Include="Scripts\Bike\LaneController.cpp" />
     <ClCompile Include="Scripts\Bike\Battery.cpp" />
     <ClCompile Include="Scripts\Audio.cpp" />
@@ -249,14 +249,14 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     </ClCompile>
     <ClCompile Include="Scene\DemoScene4.cpp" />
     <ClCompile Include="Scene\ExampleScene\ExampleScene.cpp" />
-    <ClCompile Include="Scripts\Enemy.cpp" />
+    <ClCompile Include="Scripts\Legacy\Enemy.cpp" />
     <ClCompile Include="Scene\DemoScene3.cpp" />
-    <ClCompile Include="Scripts\Aru2.cpp" />
+    <ClCompile Include="Scripts\Legacy\Aru2.cpp" />
     <ClCompile Include="Scripts\Example\ScriptExample.cpp" />
-    <ClCompile Include="Scripts\CameraController.cpp" />
+    <ClCompile Include="Scripts\Legacy\CameraController.cpp" />
     <ClCompile Include="Scripts\BackGroundImage.cpp" />
     <ClCompile Include="Scripts\BackGroundVideo.cpp" />
-    <ClCompile Include="Scripts\Aru.cpp" />
+    <ClCompile Include="Scripts\Legacy\Aru.cpp" />
     <ClCompile Include="Scripts\Bike\Health.cpp" />
     <ClCompile Include="Scripts\SolarScene\Moon.cpp" />
     <ClCompile Include="Scripts\SolarScene\Earth.cpp" />
