--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -71,6 +71,9 @@
     <Filter Include="Scripts\Weapon">
       <UniqueIdentifier>{9634cc17-4f05-4b89-90df-3372689afb28}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scripts\Legacy">
+      <UniqueIdentifier>{d891f3f6-01ba-4091-86f9-8bbf677cff57}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -88,19 +91,10 @@
     <ClInclude Include="Scene\DemoScene2.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Aru.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\Aru2.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Scripts\BackGroundImage.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\BackGroundVideo.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\CameraController.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="framework.h">
@@ -109,14 +103,8 @@
     <ClInclude Include="Scripts\Example\ScriptExample.h">
       <Filter>Scripts\ScriptExample</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Player.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Scene\DemoScene3.h">
       <Filter>Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\Enemy.h">
-      <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Scene\DemoScene4.h">
       <Filter>Scene</Filter>
@@ -244,6 +232,21 @@
     <ClInclude Include="Scripts\Bike\BikeStatScript.h">
       <Filter>PreCompiledHeader</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\Legacy\Aru.h">
+      <Filter>Scripts\Legacy</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Legacy\Aru2.h">
+      <Filter>Scripts\Legacy</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Legacy\Enemy.h">
+      <Filter>Scripts\Legacy</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Legacy\CameraController.h">
+      <Filter>Scripts\Legacy</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Legacy\Player.h">
+      <Filter>Scripts\Legacy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -258,26 +261,14 @@
     <ClCompile Include="main.cpp">
       <Filter>Application</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\Aru.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Aru2.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="Scripts\BackGroundImage.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\BackGroundVideo.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\CameraController.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="Scripts\Example\ScriptExample.cpp">
       <Filter>Scripts\ScriptExample</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Enemy.cpp">
-      <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scene\DemoScene3.cpp">
       <Filter>Scene</Filter>
@@ -308,9 +299,6 @@
     </ClCompile>
     <ClCompile Include="Scripts\Bike\LaneController.cpp">
       <Filter>Scripts\Bike</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Player.cpp">
-      <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Widget\TitleWidgetScript.cpp">
       <Filter>Scripts\Widget</Filter>
@@ -399,5 +387,20 @@
     <ClCompile Include="Scripts\Enemy\Spawn\SpawnCollider.cpp" />
     <ClCompile Include="Scripts\Enemy\Spawn\SpawnData.cpp" />
     <ClCompile Include="Scripts\Bike\BikeStatScript.cpp" />
+    <ClCompile Include="Scripts\Legacy\Aru.cpp">
+      <Filter>Scripts\Legacy</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Legacy\Aru2.cpp">
+      <Filter>Scripts\Legacy</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Legacy\Enemy.cpp">
+      <Filter>Scripts\Legacy</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Legacy\CameraController.cpp">
+      <Filter>Scripts\Legacy</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Legacy\Player.cpp">
+      <Filter>Scripts\Legacy</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
